--- a/src/ui/app.css
+++ b/src/ui/app.css
@@ -10,6 +10,9 @@ body,
 
 .app-header {
   color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .ant-table-tbody > tr:focus {
