Responsive styles for sider

--- a/src/ui/components/DataDisplay/DataDisplay.css
+++ b/src/ui/components/DataDisplay/DataDisplay.css
@@ -1,33 +1,76 @@
-.json-display {
+.data-display {
     /* These variables are here to make sure that we match
      * antd layout and styles
      */
     --space: 8px;
-    --border: 1px solid #f0f0f0;
+    --border-width: 1px;
+    --border-style: solid;
+    --border-color: #f0f0f0;
+    --border: var(--border-width) var(--border-style) var(--border-color);
     --term-background: #fafafa;
 }
 
-.json-display dl {
+.data-display dl {
     margin: 0;
-    border: var(--border)
 }
 
-.json-display dl:not(:last-child) {
+.data-display dl:not(:last-child) {
     margin-bottom: var(--space);
 }
 
-.json-display dl dt {
-    background-color: var(--term-background);
+.data-display dl dt {
+  background-color: var(--term-background);
+
+  border: var(--border);
 }
 
-.json-display dl dt,
-.json-display dl dd {
+.data-display dl dd {
+  word-wrap: anywhere;
+
+  border-color: var(--border-color);
+  border-style: var(--border-style);
+  border-width: 0 var(--border-width) var(--border-width) var(--border-width);
+}
+
+.data-display dl dt,
+.data-display dl dd {
     margin: 0;
     padding: var(--space) calc(2 * var(--space));
-    word-wrap: anywhere;
 }
 
-.json-display dl dt,
-.json-display dl dd:not(:last-child) {
+.data-display dl dt,
+.data-display dl dd:not(:last-child) {
     border-bottom: var(--border);
+}
+
+@media screen and (min-width: 1800px) {
+  .data-display dl:not(dl dl) {
+    display: table;
+    border-collapse: collapse;
+  }
+
+  .data-display dl {
+    display: table-row;
+    border: none;
+  }
+
+  .data-display dl dt {
+    display: table-cell;
+
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+
+    border: var(--border);
+  }
+
+  .data-display dl dd:empty {
+    display: none;
+  }
+
+  .data-display dl dd {
+    display: table-cell;
+
+    border: var(--border);
+  }
 }
