--- a/src/ui/views/Dashboard/Tabs/Details/components/AddressBar.css
+++ b/src/ui/views/Dashboard/Tabs/Details/components/AddressBar.css
@@ -1,12 +1,13 @@
-.address_bar {
-  margin-left: 300px;
-  margin-top: -50px;
-  padding-left: 10px;
-  font-size: 16pt;
-  background-color: #fafafa;
-  width: 80%;
-  border: groove 2px #f0f0f0;
+.addressBar {
+  margin-bottom: 16px;
+  margin-left: 140px;
+}
+
+.addressBar .topRow {
   display: grid;
-  grid-template-columns: 20fr 4fr 1fr;
-  align-items: center;
+  grid-template-columns: 20fr 4fr;
+}
+
+.addressBar .ant-page-header.ant-page-header-ghost {
+  padding: 0;
 }
